--- a/src/styles.css
+++ b/src/styles.css
@@ -75,6 +75,7 @@ textarea {
   font-size: 20px;
   /* font-family: "Segoe UI", Arial, sans-serif; */
   font-weight: 600;
+  margin-bottom: 5px;
 }
 .flex-column {
   margin-top: 15px;
@@ -92,4 +93,19 @@ textarea {
 }
 .progress {
   width: 75%;
+}
+.buttonAnddropdown {
+  margin-top: 15px;
+  display: flex;
+  flex-direction: row;
+  /* border: 1px solid pink; */
+  align-items: flex-end;
+}
+.dropdown {
+  height: 35px;
+  width: 100px;
+  margin-bottom: 5px;
+  /* margin-top: 10px; */
+  margin-left: 5px;
+  margin-right: 25px;
 }
